package com.liyi.design.pattern.structure.facade;

public abstract class Controller {

    abstract boolean open();

    abstract  boolean close();
}
